--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 $color-red :#A52449;
+$color-white:#ffffff;
 
 * {transition:color .3s ease-in-out; -webkit-transition:color .3s ease-in-out; -moz-transition:color .3s ease-in-out;}
 
@@ -10,6 +11,13 @@ $color-red :#A52449;
     margin:0 auto 8px;
     &:hover{
       text-decoration: none;
+      color:$color-white;
+    }
+    &:visited{
+      color:$color-white;
+    }
+    &:active{
+      color:$color-white;
     }
   }
 }
