Data model refresh
changes to the questions / answers and structure - needs to include
options for showing info about terms and links to more information on
some questions

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,9 +3,12 @@ $color-white:#ffffff;
 
 * {transition:color .3s ease-in-out; -webkit-transition:color .3s ease-in-out; -moz-transition:color .3s ease-in-out;}
 
-.question, .apply{
+.questions{
   text-align: center;
   padding:1em;
+}
+
+.answers, .apply{
   a{
     display:block;
     margin:0 auto 8px;
