--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@ $color-white:#ffffff;
 
 * {transition:color .3s ease-in-out; -webkit-transition:color .3s ease-in-out; -moz-transition:color .3s ease-in-out;}
 
-.questions{
+.questions, .apply{
   text-align: center;
   padding:1em;
 }
