Updated data model
Data model now includes links to information pages and stylesheet
includes alignment for bullet lists in questions.

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@
   text-align: center;
   padding: 1em; }
 
+.question ul {
+  text-align: left; }
+
 .answers a, .apply a {
   display: block;
   margin: 0 auto 8px; }
