--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,11 @@ $color-white:#ffffff;
   text-align: center;
   padding:1em;
 }
+.question{
+  ul{
+    text-align: left;
+  }
+}
 
 .answers, .apply{
   a{
