--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@ $color-red :#A52449;
 $color-white:#ffffff;
 
 * {transition:color .3s ease-in-out; -webkit-transition:color .3s ease-in-out; -moz-transition:color .3s ease-in-out;}
-
+body {padding:0;}
 .questions, .apply{
   text-align: center;
   padding:1em;
