added post message and comments

--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,17 @@ body {
     color: white; }
   .answers a:active, .apply a:active {
     color: white; }
+
+.answer {
+  position: relative;
+  margin: 0 auto;
+  width: 75%; }
+
+.info {
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  right: 0;
+  top: 15%; }
+  .info img {
+    width: 100%; }
