updated styles and added info buttons

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ body {
 
 .answers a, .apply a {
   display: block;
-  margin: 0 auto 8px; }
+  margin: 0 auto 8px;
+  z-index: 9999; }
   .answers a:hover, .apply a:hover {
     text-decoration: none;
     color: white; }
@@ -27,7 +28,7 @@ body {
 .answer {
   position: relative;
   margin: 0 auto;
-  width: 75%; }
+  width: 350px; }
 
 .info {
   width: 32px;
@@ -37,3 +38,35 @@ body {
   top: 15%; }
   .info img {
     width: 100%; }
+
+.tooltip {
+  width: 50px;
+  position: absolute;
+  top: 17.5%;
+  right: 0px;
+  padding: 4px 0;
+  background: #f1f2f2;
+  color: #64797f;
+  cursor: pointer;
+  font-family: Georgia;
+  font-style: italic;
+  font-weight: bold;
+  border: 1px solid #d1d3d4;
+  border-left: 0;
+  -webkit-box-shadow: inset 0px 1px 2px #1e1e1e;
+  -moz-box-shadow: inset 0px 1px 2px #1e1e1e;
+  box-shadow: inset 0px 1px 2px #1e1e1e;
+  -webkit-border-top-right-radius: 25px;
+  -webkit-border-bottom-right-radius: 25px;
+  -moz-border-top-right-radius: 25px;
+  -moz-border-bottom-right-radius: 25px;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+  -webkit-transition: .2s ease-in-out;
+  -moz-transition: .2s ease-in-out;
+  transition: .2s ease-in-out; }
+  .tooltip:hover {
+    color: #fefefe;
+    width: 70px;
+    right: -20px;
+    background: #64797f; }
