--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,7 +13,7 @@ body {padding:0;}
   }
 }
 
-.answers, .apply{
+.answers, .apply, .tooltip-content{
   a{
     display:block;
     margin:0 auto 8px;
@@ -49,7 +49,7 @@ body {padding:0;}
 .tooltip{
   width: 50px;
   position: absolute;
-  top: 17.5%;
+  top: 6px;
   right: 0px;
   padding: 4px 0;
   background: rgb(241, 242, 242);
@@ -78,5 +78,27 @@ body {padding:0;}
     right: -20px;
     background:rgb(100, 121, 127);
     
+  }
+}
+.tooltip-wrapper{
+  position:absolute;
+  width:100%;
+  top:0;
+  left:0;
+  height:100%;
+  background:rgba(0,0,0,.2);
+}
+.tooltip-content{
+  background: rgb(241, 242, 242);
+  border:1px solid rgb(209, 211, 212);
+  color: rgb(100, 121, 127);
+  padding:2em;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  border-radius:4px;
+  margin:10% auto 0;
+  width:50%;
+  div{
+    margin-bottom:1em;
   }
 }
