--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,9 +3,13 @@ $color-white:#ffffff;
 
 * {transition:color .3s ease-in-out; -webkit-transition:color .3s ease-in-out; -moz-transition:color .3s ease-in-out;}
 body {padding:0;}
-.questions, .apply{
+.hidden{display:none;}
+.questions, .apply, .loading{
   text-align: center;
   padding:1em;
+}
+.loading p{
+  font-style: italic;
 }
 .question{
   a{
