--- a/sass/style.scss
+++ b/sass/style.scss
@@ -108,6 +108,19 @@ body {padding:0;}
   border-radius:4px;
   margin:10% auto 0;
   width:50%;
+  text-align: left;
+  h3{
+    margin-bottom:1em;
+  }
+  a, a:visited, a:hover{
+    display:inline;
+    color:$color-red;
+  }
+  a.button{
+    color:$color-white;
+    display:block;
+    text-align: center;
+  }
   div{
     margin-bottom:1em;
   }
